# shiftleftr-ai

./: LICENCE  README.md  pyproject.toml
docs/: PROPOSAL_FOR_AUTHOR.md
examples/: domo_integration.py  full_workflow.py
shiftleft/: __init__.py
shiftleft/connectors/: __init__.py
shiftleft/connectors/domo/: __init__.py  client.py  dashboard.py
shiftleft/design/: __init__.py  contracts.py
shiftleft/graduated/: __init__.py  response.py
shiftleft/orchestration/: __init__.py  chain.py
shiftleft/preflight/: __init__.py  assessment.py
