[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiftleft-ai"
version = "0.1.0"
description = "Design-first hallucination management for enterprise AI systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Lee Griffiths"}
]
keywords = [
    "ai",
    "hallucination",
    "reliability",
    "llm",
    "enterprise",
    "guardrails",
    "confidence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
hallbayes = [
    "hallbayes>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.20.0",
]
domo = [
    "pydomo>=0.3.0",
    "pandas>=1.5.0",
]
all = [
    "hallbayes>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "pydomo>=0.3.0",
    "pandas>=1.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/leochlon/shiftleft-ai"
Documentation = "https://github.com/leochlon/shiftleft-ai#readme"
Repository = "https://github.com/leochlon/shiftleft-ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["shiftleft*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
